# Nebula

./: .gitignore  README.md
Nebula/: .env.example  package.json  tailwind.config.ts  vite.config.ts
Nebula/client/: index.html
Nebula/client/src/: App.tsx  index.css  main.tsx
Nebula/client/src/components/: AsciiClouds.tsx  CoinflipScoreBoard.tsx  GameControls.tsx  ParticleEffect.tsx  PlayingCard.tsx  RetroButton.tsx  RetroCoin.tsx  ScoreBoard.tsx  StatusBadge.tsx  TransactionLink.tsx  WalletButton.tsx  WalletInfo.tsx
Nebula/client/src/components/ui/: button.tsx  dialog.tsx
Nebula/client/src/hooks/: use-coinflip-leaderboard.ts  use-coinflip-stats.ts  use-leaderboard.ts  use-stats.ts
Nebula/client/src/lib/: analytics.ts  blackjack-client.ts  blackjack.ts  coinflip-client.ts  wallet.tsx
Nebula/client/src/pages/: Coinflip.tsx  Game.tsx
Nebula/server/: index.ts  routes.ts  storage.ts
Nebula/shared/: routes.ts  types.ts
blackjack/: Anchor.toml  Arcium.toml  package.json
blackjack/encrypted-ixs/: Cargo.toml
blackjack/encrypted-ixs/src/: lib.rs
blackjack/programs/blackjack/: Cargo.toml
blackjack/programs/blackjack/src/: lib.rs
blackjack/tests/: blackjack.ts
coinflip/: Anchor.toml
coinflip/encrypted-ixs/: Cargo.toml
coinflip/encrypted-ixs/src/: lib.rs
coinflip/programs/coinflip/: Cargo.toml
coinflip/programs/coinflip/src/: lib.rs
coinflip/tests/: coinflip.ts
