[package]
name = "blackjack"
version = "0.8.5"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blackjack"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }

arcium-client = { version = "0.8.5", default-features = false }
arcium-macros = "0.8.5"
arcium-anchor = "0.8.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
